--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -8,8 +8,8 @@ spring:
         git:
           uri: https://github.com/jcuba/sp-solutions-master.git
           searchPaths: config-data
-          username: jcubamedellin@gmail.com
-          password: J0s3cub489
+          username: ${GIT_USER}
+          password: ${GIT_PASSWORD}
           default-label: "master"
   security:
     user:
